error message in the workshop page is now correctly aligned

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -504,3 +504,10 @@ tr:hover {
 .hidden {
    display: none;
 }
+
+.workshop {
+   align-items: flex-start !important;
+}
+.workshopButtons {
+   margin-top: 190px;
+}
